# CppOpenGLLBoidGroups

./: .gitignore  CMakeLists.txt  Readme.md  b  config.json  fix  g.sh  push-to-github.md  q  r  run_wsl.sh  test  test_opengl  test_opengl.cpp
Include/: Camera.h  Config.h  LiquidSimulation.h  Renderer.h  Wall.h
Shaders/: liquid.frag  liquid.vert  liquid_simple.frag  wall.frag
Source/: Camera.cpp  Config.cpp  LiquidSimulation.cpp  Renderer.cpp  main.cpp
Src/: Camera.cpp  LiquidSimulation.cpp  Renderer.cpp  Wall.cpp
Test/: CMakeLists.txt  TestCamera.cpp  TestLiquidSimulation.cpp  TestWall.cpp
include/: Renderer.h
shaders/: wall.frag  wall.vert
src/: Renderer.cpp  main.cpp
